fix: trim workspace and project name whitespace [DET-7390] [DET-7747] (#4451)
(cherry picked from commit a1a06c4ac415585efc2fe7ba444983a47d47f28c)

--- a/webui/react/src/components/NavigationSideBar.module.scss
+++ b/webui/react/src/components/NavigationSideBar.module.scss
@@ -140,7 +140,7 @@
         overflow: hidden;
         padding-right: 16px;
         white-space: nowrap;
-        width: auto
+        width: 100%;
       }
     }
     .navItem.active,
